# algo

./: .gitignore
hw1/: ArcGraph.cpp  CMakeLists.txt  IGraph.h  MatrixGraph.h
hw1-2/: CMakeLists.txt  main.cpp
hw1/hw1/: ArcGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  SetGraph.cpp  SetGraph.h  main.cpp
hw2/: CMakeLists.txt  main.cpp
hw2-v4/: CMakeLists.txt  main.cpp
hw3/: CMakeLists.txt  m.cpp  main.cpp
hw3-2/: CMakeLists.txt  Deque.cpp  Deque.h  main.cpp
hw4/: CMakeLists.txt  main.cpp
hw4-3/: Array.cpp  CMakeLists.txt  Heap.cpp  main.cpp
hw5/: CMakeLists.txt  haufman.cpp  heap.h  main.cpp
hw5-3/: CMakeLists.txt  main.cpp
hw6-2/: CMakeLists.txt  main.cpp
hw7-2/: CMakeLists.txt  main.cpp
untitled2/: DatabaseManager.cpp  DatabaseManager.h  pgbackend.cpp  pgbackend.h  pgconnection.cpp  pgconnection.h
